# pixel-nerf

./: .env_default  .gitignore  BlenderPixelNerf.blend  BlenderPixelNerf.blend1  Blender_cli.py  Dataset.py  README.md  Singularity.def  check.py  check2.py  dockerfile  eval_view_list_gen.py  expconf.conf  explore.ipynb  headless_Blender.py  headless_Blender_v2.py  main.py  newBlender.py  pose_sanit_check.py  pretrainer.py  pyproject.toml  trainv2.py
conf/: default_mv.conf
conf/exp/: pollen.conf
data/: flatt_white.py  visulaizer.py
eval/: eval.py  eval2.py  eval_2_views.py  eval_2_views_all.py
input/: normales.py
src/data/: SRNDataset.py  __init__.py  data_util.py  orgSRNDataset.py  pollen_image_gen.py
train/: finetune_resnet.py  multigpu.py  org_train.py  orgtrain.py  train.py  train_pollen.py  train_restnet.py
train/trainlib/: trainer.py
