[project]
name = "pixel-nerf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotmap>=1.3.30",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ipdb>=0.13.13",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pretrainedmodels>=0.7.4",
    "pyhocon>=0.3.61",
    "python-dotenv>=1.1.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.8",
    "vtk>=9.4.2",
]
